feat : prettier formatting

--- a/cypress/tsconfig.e2e.config.json
+++ b/cypress/tsconfig.e2e.config.json
@@ -8,11 +8,6 @@
     "forceConsistentCasingInFileNames": true,
     "types": ["cypress"]
   },
-  "include": [
-    "**/*.ts",
-    "cypress/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["**/*.ts", "cypress/**/*.ts"],
+  "exclude": ["node_modules"]
 }
