--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prisma:migrate": "prisma migrate dev",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "test:ci": "start-server-and-test dev:test http://localhost:4000 cypress:run --timeout 60000",
+    "test:ci": "npm run cypress:run",
     "lint": "eslint . --ext .ts --max-warnings=0",
     "format": "prettier --write ."
   },
