--- a/.github/workflows/ci-cypress.yml
+++ b/.github/workflows/ci-cypress.yml
@@ -52,8 +52,8 @@ jobs:
 
       - name: Wait for backend to be ready
         run: |
-          npm run dev:test &  
-          npx wait-on http://localhost:4000
+          npm run dev:test &
+          npx wait-on http://localhost:4000/health
 
       - name: Run E2E tests
         run: npm run test:ci
