--- a/.github/workflows/ci-cypress.yml
+++ b/.github/workflows/ci-cypress.yml
@@ -50,6 +50,11 @@ jobs:
       - name: ✅ Vérification Prettier
         run: npm run format
 
+      - name: Wait for backend to be ready
+        run: |
+          npm run dev:test &
+          npx wait-on http://localhost:4000/health
+
       - name: Run E2E tests
         run: npm run test:ci
         env:
