--- a/.github/workflows/ci-cypress.yml
+++ b/.github/workflows/ci-cypress.yml
@@ -53,6 +53,11 @@ jobs:
       - name: Wait for backend to be ready
         run: |
           npx wait-on http://localhost:4000/health
+          curl -I http://localhost:4000/health
+
+      - name: Check database connection
+        run: |
+          psql $DATABASE_URL -c "SELECT 1"
 
       - name: Run E2E tests
         run: npm run test:ci
