--- a/.github/workflows/ci-cypress.yml
+++ b/.github/workflows/ci-cypress.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
