--- a/.github/workflows/ci-cypress.yml
+++ b/.github/workflows/ci-cypress.yml
@@ -29,9 +29,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -54,7 +51,9 @@ jobs:
         run: npm run format
 
       - name: Run E2E tests
-        run: npm run test:ci
+        uses: cypress-io/github-action@v6
+        with:
+          run: npm run test:ci
         env:
           DATABASE_URL: postgresql://test_user:test_password@localhost:5432/testdb
           JWT_SECRET: testsecret
