--- a/.github/workflows/ci-cypress.yml
+++ b/.github/workflows/ci-cypress.yml
@@ -53,7 +53,9 @@ jobs:
       - name: Run E2E tests
         uses: cypress-io/github-action@v6
         with:
-          run: npm run test:ci
+          start: npm run dev:test
+          wait-on: “http://localhost:4000”
+          command: npm run cypress:run
         env:
           DATABASE_URL: postgresql://test_user:test_password@localhost:5432/testdb
           JWT_SECRET: testsecret
