--- a/.github/workflows/ci-cypress.yml
+++ b/.github/workflows/ci-cypress.yml
@@ -2,7 +2,7 @@ name: CI - Cypress E2E tests
 
 on:
   push:
-    branches: [main, dev]
+    branches: [main]
   pull_request:
     branches: [main, dev]
 
@@ -12,7 +12,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:13
+        image: postgres:17
         ports:
           - 5432:5432
         env:
@@ -44,10 +44,10 @@ jobs:
         env:
           DATABASE_URL: postgresql://test_user:test_password@localhost:5432/testdb
 
-      - name: ✅ Vérification ESLint
+      - name: Vérification ESLint
         run: npm run lint
 
-      - name: ✅ Vérification Prettier
+      - name: Vérification Prettier
         run: npm run format
 
       - name: Run E2E tests
