--- a/.github/workflows/ci-cypress.yml
+++ b/.github/workflows/ci-cypress.yml
@@ -42,7 +42,7 @@ jobs:
           npx prisma generate
           npx prisma migrate deploy
         env:
-          DATABASE_URL: postgresql://test_user:test_password@localhost:5432/testdb
+          DATABASE_URL: ${DATABASE_URL}
 
       - name: Vérification ESLint
         run: npm run lint
@@ -57,6 +57,6 @@ jobs:
           wait-on: 'http://localhost:4000'
           command: npm run cypress:run
         env:
-          DATABASE_URL: postgresql://test_user:test_password@localhost:5432/testdb
-          JWT_SECRET: testsecret
-          PORT: 4000
+          DATABASE_URL: ${DATABASE_URL}
+          JWT_SECRET: ${JWT_SECRET}
+          PORT: ${PORT}
