--- a/.github/workflows/ci-cypress.yml
+++ b/.github/workflows/ci-cypress.yml
@@ -54,7 +54,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           start: npm run dev:test
-          wait-on: 'http://localhost:4000'
+          wait-on: "http://localhost:4000"
           command: npm run cypress:run
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
