--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -1,4 +1,4 @@
-name: CI - Cypress E2E tests
+name: CI - Tests (Jest + Cypress)
 
 on:
   push:
@@ -7,6 +7,33 @@ on:
     branches: [main, dev]
 
 jobs:
+  unit-tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Setup Prisma
+        run: |
+          npx prisma generate
+          npx prisma migrate deploy
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
+      - name: Run unit tests with Jest
+        run: npm run test:unit -- --coverage
+        env:
+          NODE_ENV: test
+
   e2e-tests:
     runs-on: ubuntu-latest
 
@@ -35,7 +62,7 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Setup Prisma
         run: |
