--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "prisma:migrate": "prisma migrate dev",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "test:ci": "start-server-and-test \"dev:test\" http://localhost:4000 \"cypress:run\"",
+    "test:ci": "test:unit \"start-server-and-test \"dev:test\" http://localhost:4000 \"cypress:run\"",
+    "test:unit": "jest",
+    "test:unit:coverage": "jest --coverage",
     "lint": "eslint . --ext .ts --max-warnings=0",
     "format": "prettier --write ."
   },
@@ -20,7 +22,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.19.1",
+    "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cypress": "^14.3.1",
@@ -35,6 +37,7 @@
     "@types/cors": "^2.8.17",
     "@types/cypress": "^0.1.6",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.5.4",
@@ -48,9 +51,12 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.2.6",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "prisma": "^5.19.1",
     "start-server-and-test": "^2.0.11",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3",
