feat:getitem unit test ok

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cypress:run": "cypress run",
     "test:ci": "test:unit \"start-server-and-test \"dev:test\" http://localhost:4000 \"cypress:run\"",
     "test:unit": "jest",
+    "test:unit:watch": "jest --watch",
     "test:unit:coverage": "jest --coverage",
     "lint": "eslint . --ext .ts --max-warnings=0",
     "format": "prettier --write ."
@@ -56,7 +57,7 @@
     "prisma": "^5.19.1",
     "start-server-and-test": "^2.0.11",
     "supertest": "^7.1.0",
-    "ts-jest": "^29.3.2",
+    "ts-jest": "^29.3.4",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3",
