--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/src/index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
     "dev:test": "cross-env NODE_ENV=test ts-node-dev src/index.ts",
     "build": "tsc",
@@ -24,7 +24,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.22.0",
-    "bcrypt": "^5.1.1",
+    "@types/bcryptjs": "^3.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "cypress": "^14.3.1",
     "express": "^4.19.2",
@@ -34,7 +35,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
-    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/cypress": "^0.1.6",
     "@types/express": "^4.17.21",
