--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
       "src/*": ["src/*"]
     },
   },
-  "include": ["src/**/*", "cypress.config.ts", "types", "jest.d.ts", "tests/**/*", "__mocks__"],
+  "include": ["src/**/*", "types", "jest.d.ts", "tests/**/*", "__mocks__"],
   "exclude": ["node_modules"]
 }
